@@ -1,5 +1,12 @@
 2009-11-18  Lin Ma  <Lin.Ma@Sun.COM>
 
+	* common/nwamui_daemon.c (nwamui_daemon_update_status):
+	According to comments#15,16 of 12079, we don't case ENMs state.
+	* common/nwamui_ncu.c:
+	Clean the dependency of link events.
+
+2009-11-18  Lin Ma  <Lin.Ma@Sun.COM>
+
 	* capplet/nwam_conn_stat_panel.c (conn_view_filter_visible_cb):
 	* capplet/nwam_net_conf_panel.c (nwam_connection_cell_func):
 	* common/libnwamui.c (nwamui_util_get_env_status_icon):
